--- a/ElearningWebsite-SPA/src/app/navbar/navbar.component.html
+++ b/ElearningWebsite-SPA/src/app/navbar/navbar.component.html
@@ -8,8 +8,20 @@
             <li class="nav-item" routerLinkActive="active">
                 <a class="nav-link">About</a>
             </li>
+            <!-- <li class="nav-item">
+                <a class="nav-link" (click)="logout()">Logout</a>
+            </li> -->
         </ul>
-        <form *ngIf="loggedIn()" #loginForm="ngForm" class="form-inline my-2 my-lg-0" (ngSubmit)="login()">
+
+        <div ngbDropdown *ngIf="loggedIn()" class="d-inline-block">
+            <button class="btn btn-outline-primary" id="dropdownBasic1" ngbDropdownToggle>Wellcome {{authService.decodedToken?.unique_name | titlecase}}</button>
+            <div ngbDropdownMenu aria-labelledby="dropdownBasic1">
+                <button ngbDropdownItem>Edit Profile</button>
+                <button ngbDropdownItem (click)="logout()">Logout</button>
+            </div>
+        </div>
+
+        <form *ngIf="!loggedIn()" #loginForm="ngForm" class="form-inline my-2 my-lg-0" (ngSubmit)="login()">
             <input class="form-control mr-sm-2" type="text" name="username" placeholder="Username" required [(ngModel)]="model.username">
             <input class="form-control mr-sm-2" type="password" name="password" placeholder="Password" required [(ngModel)]="model.password">
             <div class="form-check">
