--- a/ElearningWebsite-SPA/src/app/home/home.component.html
+++ b/ElearningWebsite-SPA/src/app/home/home.component.html
@@ -3,15 +3,15 @@
         <h1>Enroll to your most wanted courses</h1>
         <p class="lead">Come on in to view your courses... All you need to do is sign up!</p>
         <div class="text-center">
-            <button class="btn btn-primary btn-lg mr-2">Register</button>
-            <button class="btn btn-info btn-lg">Learn more</button>
+            <button class="btn btn-primary btn-lg mr-2" (click)="registerToggleTeacher()">Register as Teacher</button>
+            <button class="btn btn-primary btn-lg mr-2" (click)="registerToggleStudent()">Register as Student</button>
         </div>
     </div>
 
-    <div class="container">
+    <div *ngIf="registerMode" class="container">
         <div class="row justify-content-center">
             <div class="col-4">
-                <!-- <app-register (cancelRegister)="cancelRegisterMode($event)"></app-register> -->
+                <app-register (cancelRegister)="cancelRegisterMode($event)" [isTeacher]=isTeacher></app-register>
             </div>
         </div>
     </div>
