--- a/ElearningWebsite-SPA/src/app/navbar/navbar.component.html
+++ b/ElearningWebsite-SPA/src/app/navbar/navbar.component.html
@@ -1,4 +1,4 @@
-<nav class="navbar navbar-expand-md navbar-light bg-light">
+<nav class="navbar navbar-expand-md fixed-top navbar-light bg-light">
     <div class="container">
         <a class="navbar-brand" [routerLink]="['/home']">Elearning</a>
         <ul class="navbar-nav mr-auto ml-12">
