--- a/ElearningWebsite-SPA/src/app/home/home.component.html
+++ b/ElearningWebsite-SPA/src/app/home/home.component.html
@@ -1,4 +1,4 @@
-<div class="container mt-5">
+<div class="container pt-5 mt-5">
     <div *ngIf="!registerMode" style="text-align: center">
         <h1>Enroll to your most wanted courses</h1>
         <p class="lead">Come on in to view your courses... All you need to do is sign up!</p>
