--- a/ElearningWebsite-SPA/src/app/course/course-n-detail/course-n-detail.component.html
+++ b/ElearningWebsite-SPA/src/app/course/course-n-detail/course-n-detail.component.html
@@ -7,7 +7,7 @@
     <div class="row">
         <div class="col-sm-4">
             <div class="card">
-                <img class="card-img-top img-thumbnail" src="{{course.avaUrl}}" alt="{{course.name}}">
+                <img class="card-img-top img-thumbnail" src="{{course.avaUrl || '../../../../../assets/background.png'}}" alt="{{course.name}}">
                 <div class="card-body">
                     <div>
                         <strong>Name: </strong>
@@ -29,26 +29,20 @@
                 <tabset class="member-tabset">
                     <tab heading="Course Info">
                         <h4>Requirement</h4>
-                        <div *ngIf="requirements.toString() !== ''">
-                            <ul *ngFor="let requirement of requirements">
-                                <li>{{requirement}}</li>
-                            </ul>
-                        </div>
-                        <div *ngIf="requirements.toString() === ''">
-                            <p>No Requirement</p>
-                        </div>
+                        <ul *ngFor="let requirement of requirements">
+                            <li>{{requirement}}</li>
+                        </ul>
                         <h4>Description</h4>
-                        <div *ngIf="descriptions.toString() !== ''" class="mt-2 mb-2">
-                            <ul *ngFor="let description of descriptions">
-                                <li>{{description}}</li>
-                            </ul>
-                        </div>
-                        <div *ngIf="descriptions.toString() === ''" class="mt-2 mb-2">
-                            <p>No Description</p>
-                        </div>
+                        <ul *ngFor="let description of descriptions">
+                            <li>{{description}}</li>
+                        </ul>
                     </tab>
-                    <tab *ngIf="loggedIn()" heading="Videos">
-                        <app-video-edit [courseId]="course.courseId" [videos]="course.videos"></app-video-edit>
+                    <tab *ngIf="isTeacher()" heading="Videos">
+                        <div *ngFor="let video of videos" class="row">
+                            <div class="col-sm-10" style="text-overflow: ellipsis">
+                                <a class="overflow-auto" href="{{video.publicId}}" (click)="videoPlayTab(video.videoUrl)">{{video.publicId}}</a>
+                            </div>
+                        </div>
                     </tab>
                 </tabset>
             </div>
