--- a/ElearningWebsite-SPA/src/app/navbar/navbar.component.html
+++ b/ElearningWebsite-SPA/src/app/navbar/navbar.component.html
@@ -5,15 +5,18 @@
             <li *ngIf="isTeacher()" class="nav-item" routerLinkActive="active">
                 <a class="nav-link" [routerLink]="['/teacher/courses']">My Courses</a>
             </li>
+            <li *ngIf="isStudent()" class="nav-item" routerLinkActive="active">
+                <a class="nav-link" [routerLink]="['/courses']">All Courses</a>
+            </li>
+            <li *ngIf="isStudent()" class="nav-item" routerLinkActive="active">
+                <a class="nav-link" [routerLink]="['/student/courses']">My Courses</a>
+            </li>
             <li *ngIf="!loggedIn()" class="nav-item" routerLinkActive="active">
                 <a class="nav-link" [routerLink]="['/courses']">Courses</a>
             </li>
             <li class="nav-item" routerLinkActive="active">
                 <a class="nav-link" [routerLink]="['/about']">About</a>
             </li>
-            <!-- <li>
-                <button ngbDropdownItem (click)="logout()">Logout</button>
-            </li> -->
         </ul>
 
         <div ngbDropdown *ngIf="loggedIn()" class="d-inline-block">
