--- a/ElearningWebsite-SPA/src/app/course/course-card/course-card.component.html
+++ b/ElearningWebsite-SPA/src/app/course/course-card/course-card.component.html
@@ -1,4 +1,4 @@
-<div *ngIf="!isTeacher" class="card mb-4" [routerLink]="['/courses/', course.courseId]">
+<div *ngIf="!authService.loggedIn()" class="card mb-4" [routerLink]="['/courses/', course.courseId]">
     <div class="card-img-wrapper">
         <img src="{{course.avaUrl || '../../../../../assets/background.png'}}" alt="{{course.name}}" class="card-img-top">
     </div>
@@ -7,6 +7,14 @@
     </div>
 </div>
 <div *ngIf="isTeacher()" class="card mb-4" (click)="toTeacherCourse(course.courseId)">
+    <div class="card-img-wrapper">
+        <img src="{{course.avaUrl || '../../../../../assets/background.png'}}" alt="{{course.name}}" class="card-img-top">
+    </div>
+    <div class="card-body p-1">
+        <p class="text-lg-center mt-3">{{course.name}}</p>
+    </div>
+</div>
+<div *ngIf="isStudent()" class="card mb-4" (click)="toStudentCourse(course.courseId)">
     <div class="card-img-wrapper">
         <img src="{{course.avaUrl || '../../../../../assets/background.png'}}" alt="{{course.name}}" class="card-img-top">
     </div>
